--- a/web二/20190102/课堂笔记.md
+++ b/web二/20190102/课堂笔记.md
@@ -55,3 +55,18 @@
 
 #### 变量的类型仅仅取决于当前变量值
 #### 里面所存储的什么值
+
+## JavaScript中有五种基本数据类型（也叫做简单数据类型）分别为：
+undefined、null、bolean、number、string；另外还含有一种复杂的数据类型：object
+
+## JavaScript 一种嵌入在浏览器内的客户端脚本语言，属于解释型语言，也就是说在运行的时候不需要编译，
+而是由浏览器来对他的代码翻译成浏览器本身能认识的玩意再执行，
+不同于编程语言的是编程语言都是需要把编写的代码编译成机器码才能执行。而他的主要作用之一就是用于特效制作，
+* JavaScript用来制作页面的交互效果和动态效果
+
+### 淘宝中涉及那些动态效果，交互效果
+* 1、注册表单验证
+* 2、弹出登录框
+* 3、商品图片的放大效果
+* 4、缩略图的切换
+* 5、回到顶部的效果 
